tests/rosetta/out/C/barnsley-fern.error
cc: exit status 1
/tmp/barnsley-fern.c: In function ‘_mochi_main’:
/tmp/barnsley-fern.c:77:5: error: ‘grid’ undeclared (first use in this function)
   77 |     grid = 0;
      |     ^~~~
/tmp/barnsley-fern.c:77:5: note: each undeclared identifier is reported only once for each function it appears in
