tests/rosetta/out/C/barnsley-fern.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:05Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:24:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static double xMax = 2.6558;
static double yMin = 0.0;
static double yMax = 9.9983;
static int width = 60;
static int nIter = 10000;
static int row = 0;
static int seed = 1;
static double x = 0.0;
static double y = 0.0;
static int i = 0;

list_int randInt(int s, int n) {
  int next = (s * 1664525 + 1013904223) % 2147483647;
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = next;
  tmp1.data[1] = next % n;
  return tmp1;
}

int _mochi_main() {
  double xMin = (-2.182);
  double dx = xMax - xMin;
  double dy = yMax - yMin;
  int height = (int)((width * dy / dx));
  while (row < height) {
    list_string line = list_string_create(0);
    int col = 0;
    while (col < width) {
      list_string tmp2 = list_string_create(1);
      tmp2.data[0] = " ";
      list_string tmp3 = concat_list_string(line, tmp2);
      line = tmp3;
      col = col + 1;
    }
    grid = 0;
    row = row + 1;
  }
  int ix = (int)((((double)(width)) * (x - xMin) / dx));
  int iy = (int)((((double)(height)) * (yMax - y) / dy));
  if (ix >= 0 && ix < width && iy >= 0 && iy < height) {
    grid.data[iy].data[ix] = "*";
  }
  while (i < nIter) {
    list_int res = randInt(seed, 100);
    seed = res.data[0];
    int r = res.data[1];
    if (r < 85) {
      double nx = 0.85 * x + 0.04 * y;
      double ny = (-0.04) * x + 0.85 * y + 1.6;
      x = nx;
      y = ny;
    } else if (r < 92) {
      double nx = 0.2 * x - 0.26 * y;
      double ny = 0.23 * x + 0.22 * y + 1.6;
      x = nx;
      y = ny;
    } else if (r < 99) {
      double nx = (-0.15) * x + 0.28 * y;
      double ny = 0.26 * x + 0.24 * y + 0.44;
      x = nx;
      y = ny;
    } else {
      x = 0.0;
      y = 0.16 * y;
    }
    ix = (int)((((double)(width)) * (x - xMin) / dx));
    iy = (int)((((double)(height)) * (yMax - y) / dy));
    if (ix >= 0 && ix < width && iy >= 0 && iy < height) {
      grid.data[iy].data[ix] = "*";
    }
    i = i + 1;
  }
  row = 0;
  while (row < height) {
    char *line = "";
    int col = 0;
    while (col < width) {
      line = line + grid.data[row].data[col];
      col = col + 1;
    }
    printf("%s\n", line);
    row = row + 1;
  }
  return 0;
}
int main() { return _mochi_main(); }
